# Pipe

./: .gitignore  CMakeLists.txt  Controller.cpp  Controller.h  FileDescriptor.cpp  FileDescriptor.h  Mainwindow.cpp  Mainwindow.h  Mainwindow.ui  Model.cpp  Model.h  Pipe.cpp  Pipe.h  Process.cpp  Process.h  Queue.cpp  Queue.h  ReadFileDescriptor.cpp  ReadFileDescriptor.h  WriteFileDescriptor.cpp  WriteFileDescriptor.h  main.cpp
